Added todo note

--- a/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
+++ b/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
@@ -849,6 +849,7 @@ instead be
 on the 5th line of the Verbose output?  I think this would be consistent with the paper, but whoever wrote this might have had a specific reason for doing it this way.
 }
 \pedro[inline]{I modified the code, to produce the output you suggested.}
+\daniel[inline]{OK.  I will just manually make this change in the verbatim environment below then, in case we decide to keep it here.}
 
 \medskip
 {\small
@@ -864,7 +865,7 @@ Verifying if special algorithms apply...
 
 Special fpt algorithms were not used ...
 
-ν has been computed: ν = ν(3,f) = 17 ...
+ν has been computed: ν = nu(3,f) = 17 ...
 
 fpt lies in the interval [ν/(p^e-1),(ν+1)/p^e] = [17/124,18/125] ...
 
